--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,16 +2,25 @@ body {
   margin: 0;
   padding: 0;
   width: 100%;
-  background-color: #6810d8;
+  background-color: #873fe6;
+  font-family: "Acme", sans-serif;
+  font-family: "Kanit", sans-serif;
+}
+
+.container {
   display: flex;
   flex-direction: column;
-  gap: 20px;
+  gap: 35px;
+  height: 100vh;
 }
 
 .main-body-section {
   background-color: #fcfbfc;
   border-radius: 30px 30px 0 0;
   padding: 0 10px 0 10px;
+  flex: 1;
+  box-shadow: 0 -12px 0 -5px rgba(252, 251, 252, 0.7),
+    0 -25px 0 -10px rgba(252, 251, 252, 0.4);
 }
 
 .main-title-section {
@@ -38,6 +47,7 @@ body {
   background-color: #fff;
   border-radius: 100px;
   padding: 3px 15px 3px 15px;
+  cursor: pointer;
 }
 
 .main-task-pill {
@@ -56,6 +66,7 @@ body {
   padding: 20px;
   box-shadow: 0 0 2px #ccc;
   align-items: center;
+  cursor: pointer;
 }
 
 .task-advance {
@@ -67,4 +78,134 @@ body {
 .main-task-name {
   font-weight: bold;
   font-size: 19px;
+}
+
+.main-footer {
+  position: fixed;
+  bottom: 0;
+  display: flex;
+  width: 100%;
+  justify-content: center;
+  margin: 0;
+  padding: 0;
+  height: 50px;
+  background-color: #fff;
+}
+
+.action-footer-btn {
+  position: fixed;
+  bottom: 0;
+  display: block;
+  width: 60px;
+  justify-content: center;
+  margin: 0;
+  padding: 0;
+  height: 60px;
+  background-color: #fff;
+  border-radius: 100%;
+  margin-bottom: 15px;
+  align-items: center;
+  font-size: 35px;
+  border: none;
+  color: #873fe6;
+  cursor: pointer;
+}
+
+.footer-btn-container {
+  display: flex;
+  width: 100%;
+  align-items: center;
+  flex-direction: row;
+  justify-content: center;
+}
+
+/* MODAL */
+.modal-container {
+  position: fixed;
+  z-index: 1;
+  display: none;
+  width: 100%;
+  height: 100%;
+  overflow: auto;
+  background-color: rgba(0, 0, 0, 0.4);
+  top: 0;
+  left: 0;
+}
+
+.modal-content {
+  display: flex;
+  width: 40%;
+  flex-direction: column;
+  justify-content: center;
+  align-content: center;
+  align-items: center;
+  height: 70%;
+  background-color: #fff;
+  margin: auto;
+  margin-top: 100px;
+  border-radius: 10px;
+}
+
+.main-modal-form {
+  display: flex;
+  flex-direction: column;
+  align-content: center;
+  justify-content: center;
+  gap: 20px;
+  width: 50%;
+}
+
+.main-modal-form input {
+  height: 40px;
+  border-radius: 5px;
+  border: 1px solid #ccc;
+  padding: 6px;
+}
+
+.main-modal-form input:focus-visible {
+  height: 40px;
+  border-radius: 5px;
+  border: 1px solid #873fe6;
+  padding: 6px;
+  outline: none;
+}
+
+.modal-btn-container {
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-end;
+  gap: 20px;
+}
+
+.modal-btn-container .cancel-btn {
+  background-color: #ad3232;
+  color: #fff;
+  border: none;
+  padding: 15px;
+  border-radius: 6px;
+  cursor: pointer;
+}
+
+.modal-btn-container .submit-btn {
+  background-color: #873fe6;
+  color: #fff;
+  border: none;
+  padding: 15px;
+  border-radius: 6px;
+  cursor: pointer;
+}
+
+progress {
+  background-color: #000;
+  border-radius: 5px;
+}
+
+progress::-webkit-progress-bar {
+  background-color: #ccc;
+  border-radius: 5px;
+}
+
+progress::-webkit-progress-value {
+  background-color: #873fe6;
+  border-radius: 5px;
 }
