bugfix: minor css bugfix in subtask modal

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -300,6 +300,7 @@ progress::-webkit-progress-value {
   align-content: center;
   justify-content: center;
   overflow: auto;
+  width: 100%;
 }
 
 .subtask-input,
